Fixed vis grow bug again. Aligned icons at top.

--- a/Sprint3/css/style.css
+++ b/Sprint3/css/style.css
@@ -89,7 +89,7 @@ fieldset
 
 #optionIconContainer img
 {
-	margin-top: 25px;
+	margin-top: 20px;
 	margin-right: 5px;
 	cursor: pointer;
 }
